Fix alignment issues with wide and full blocks for front page.

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3025,6 +3025,20 @@ a:focus {
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .newspack-front-page .entry .entry-content > *.alignwide {
+    margin-right: calc(25% - 25vw);
+    margin-left: calc(25% - 25vw);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .newspack-front-page .entry .entry-content > *.alignfull {
+    margin-right: calc(50% - 50vw);
+    margin-left: calc(50% - 50vw);
+  }
+}
+
 /*
  * Unset nested content selector styles
  * - Prevents layout styles from cascading too deeply
@@ -3222,7 +3236,7 @@ a:focus {
 }
 
 .entry .entry-content .wp-block-latest-posts.is-grid li a:after {
-  content: '';
+  content: "";
 }
 
 .entry .entry-content .wp-block-latest-posts.is-grid li:last-child {
@@ -3230,7 +3244,7 @@ a:focus {
 }
 
 .entry .entry-content .wp-block-latest-posts.is-grid li:last-child a:after {
-  content: '';
+  content: "";
 }
 
 .entry .entry-content .wp-block-preformatted {
@@ -3377,8 +3391,8 @@ a:focus {
 
 @media only screen and (min-width: 768px) {
   .entry .entry-content .wp-block-pullquote.is-style-solid-color.alignfull {
-    padding-right: calc(10% + 58px + (2 * 1rem));
-    padding-left: calc(10% + 58px + (2 * 1rem));
+    padding-right: calc( 10% + 58px + (2 * 1rem));
+    padding-left: calc( 10% + 58px + (2 * 1rem));
   }
 }
 
@@ -3700,10 +3714,10 @@ a:focus {
   .entry .entry-content .wp-block-columns .wp-block-column > *:last-child {
     margin-bottom: 0;
   }
-  .entry .entry-content .wp-block-columns[class*='has-'] > * {
+  .entry .entry-content .wp-block-columns[class*="has-"] > * {
     margin-left: 1rem;
   }
-  .entry .entry-content .wp-block-columns[class*='has-'] > *:last-child {
+  .entry .entry-content .wp-block-columns[class*="has-"] > *:last-child {
     margin-left: 0;
   }
   .entry .entry-content .wp-block-columns.alignfull,
@@ -3831,7 +3845,7 @@ a:focus {
 
 .entry .entry-content .has-white-background-color,
 .entry .entry-content .wp-block-pullquote.is-style-solid-color.has-white-background-color {
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 .entry .entry-content .has-primary-color,
@@ -3841,8 +3855,11 @@ a:focus {
 }
 
 .entry .entry-content .has-primary-variation-color,
-.entry .entry-content .wp-block-pullquote.is-style-solid-color blockquote.has-primary-variation-color,
-.entry .entry-content .wp-block-pullquote.is-style-solid-color blockquote.has-primary-variation-color p {
+.entry .entry-content .wp-block-pullquote.is-style-solid-color
+blockquote.has-primary-variation-color,
+.entry .entry-content .wp-block-pullquote.is-style-solid-color
+blockquote.has-primary-variation-color
+p {
   color: #005177;
 }
 
@@ -3853,14 +3870,17 @@ a:focus {
 }
 
 .entry .entry-content .has-secondary-variation-color,
-.entry .entry-content .wp-block-pullquote.is-style-solid-color blockquote.has-secondary-variation-color,
-.entry .entry-content .wp-block-pullquote.is-style-solid-color blockquote.has-secondary-variation-color p {
+.entry .entry-content .wp-block-pullquote.is-style-solid-color
+blockquote.has-secondary-variation-color,
+.entry .entry-content .wp-block-pullquote.is-style-solid-color
+blockquote.has-secondary-variation-color
+p {
   color: #4d4d4d;
 }
 
 .entry .entry-content .has-white-color,
 .entry .entry-content .wp-block-pullquote.is-style-solid-color blockquote.has-white-color {
-  color: #FFF;
+  color: #fff;
 }
 
 /* Media */
